--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@ Ricreiamo una webapp, con layout simil-Netflix
     <meta charset="utf-8">
     <title>Fake Netflix</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js" integrity="sha512-DZqqY3PiOvTP9HkjIWgjO6ouCbq+dxqWoJZ/Q+zPYNHmlnI2dQnbJ5bxAHpAMw+LXRm4D72EIRXzvcHQtE8/VQ==" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font.css">
   </head>
   <body>
+    <!-- vue app -->
     <div id="app">
+
       <header>
         <div id="header_left" class="float_left">
           <div id="header_logo">
@@ -31,11 +34,53 @@ Ricreiamo una webapp, con layout simil-Netflix
           </nav>
         </div>
       </header>
+
       <main>
+
+        <div id="container_library">
+          <section class="box_film">
+            <div class="hover_box">
+              <ul class="info">
+                <li><strong>Title: </strong>Lorem ipsum </li>
+                <li><strong>Original Title: </strong>lorem ipsum </li>
+                <li><strong>Leanguages: </strong>LR</li>
+                <li ><strong class="vote">Vote: </strong> </li>
+                <li><strong>Overwiev: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip </li>
+              </ul>
+            </div>
+            <img class="cover" src="https://image.tmdb.org/t/p/w600_and_h900_bestv2/xlBivetfrtF84Yx0zISShnNtHYe.jpg" alt="">
+          </section>
+          <section class="box_film">
+            <div class="hover_box">
+              <ul class="info">
+                <li><strong>Title: </strong>Lorem ipsum </li>
+                <li><strong>Original Title: </strong>lorem ipsum </li>
+                <li><strong>Leanguages: </strong>LR</li>
+                <li ><strong class="vote">Vote: </strong> </li>
+                <li><strong>Overwiev: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip </li>
+
+              </ul>
+            </div>
+            <img class="cover" src="https://image.tmdb.org/t/p/w600_and_h900_bestv2/xlBivetfrtF84Yx0zISShnNtHYe.jpg" alt="">
+          </section>
+          <section class="box_film">
+            <div class="hover_box">
+              <ul class="info">
+                <li><strong>Title: </strong>Lorem ipsum </li>
+                <li><strong>Original Title: </strong>lorem ipsum </li>
+                <li><strong>Leanguages: </strong>LR</li>
+                <li ><strong class="vote">Vote: </strong> </li>
+                <li><strong>Overwiev: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip </li>
+              </ul>
+            </div>
+            <img class="cover" src="https://image.tmdb.org/t/p/w600_and_h900_bestv2/xlBivetfrtF84Yx0zISShnNtHYe.jpg" alt="">
+          </section>
+        </div>
 
       </main>
 
     </div>
+    <!-- vue app CLOSE -->
     <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
