--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Ricreiamo una webapp, con layout simil-Netflix
         ◦ Lingua
         ◦ Voto sotto forma di stelline colorate
         ◦ Immagine placeholder larghezza  -->
-<html lang="" dir="ltr">
+<html lang="it" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>Fake Netflix</title>
