--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@ Ricreiamo una webapp, con layout simil-Netflix
               <ul class="info">
                 <li class="title_film"><strong>Title: </strong><h2>{{infofilm.title}}</h2> </li>
                 <li><strong>Original Title: </strong>{{infofilm.original_title}} </li>
-                <li><strong>Leanguages: </strong>{{infofilm.original_language}}</li>
+                <li>
+                  <strong>Leanguages:</strong>
+                    <img v-if="infofilm.original_language == 'en'|| infofilm.original_language=='it' || infofilm.original_language=='ja'" :src="'img/icons/'+ infofilm.flag_img" :alt="infofilm.original_language"><p v-else>
+                    {{infofilm.original_language}}
+                  </p>
+                </li>
+
+
                 <li><strong class="vote">Vote:</strong> <i v-for="star in infofilm.vote_average" class="fas fa-star"></i><i v-for="star in (5 -  infofilm.vote_average)" class="far fa-star"></i></li>
                 <li class="overview"><strong>Overview: </strong>{{infofilm.overview}}</li>
               </ul>
