--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Ricreiamo una webapp, con layout simil-Netflix
                 <li><strong class="vote">Vote:</strong> <i v-for="star in infofilm.vote_average" class="fas fa-star"></i><i v-for="star in (5 -  infofilm.vote_average)" class="far fa-star"></i></li>
                 <li >
                   <strong>Cast:</strong>
-                  <span class="actor" v-for="actor in 4">{{infofilm.cast[actor].name}}</span>
+                  <span v-for="actor in infofilm.cast" class="actor" v-if="actor!=undefined && infofilm.cast.length!=0 && actor.name!=undefined">{{actor.original_name}}, </span>
                 </li>
                 <li class="overview"><strong>Overview: </strong>{{infofilm.overview}}</li>
               </ul>
